// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`protocol v2 snapshots > captures a createAgent ReAct transcript snapshot 1`] = `
{
  "events": [],
  "openResponse": {
    "id": 0,
    "meta": {
      "appliedThroughSeq": 0,
      "sessionId": "<session-id>",
    },
    "result": {
      "capabilities": {
        "contentBlockTypes": [
          "text",
          "reasoning",
          "tool_call",
          "tool_call_chunk",
          "invalid_tool_call",
          "server_tool_call",
          "server_tool_call_chunk",
          "server_tool_call_result",
          "image",
          "audio",
          "video",
          "file",
          "non_standard",
        ],
        "modules": [
          {
            "commands": [
              "session.open",
              "session.describe",
              "session.close",
            ],
            "name": "session",
          },
          {
            "commands": [
              "run.input",
            ],
            "name": "run",
          },
          {
            "commands": [
              "subscription.subscribe",
              "subscription.unsubscribe",
              "subscription.reconnect",
            ],
            "name": "subscription",
          },
          {
            "channels": [
              "lifecycle",
            ],
            "commands": [
              "agent.getTree",
            ],
            "events": [
              "spawned",
              "running",
              "completed",
              "failed",
              "interrupted",
            ],
            "name": "agent",
          },
          {
            "channels": [
              "values",
            ],
            "name": "values",
          },
          {
            "channels": [
              "updates",
            ],
            "name": "updates",
          },
          {
            "channels": [
              "messages",
            ],
            "name": "messages",
          },
          {
            "channels": [
              "tools",
            ],
            "name": "tools",
          },
          {
            "channels": [
              "custom",
            ],
            "name": "custom",
          },
          {
            "channels": [
              "debug",
            ],
            "name": "debug",
          },
          {
            "channels": [
              "checkpoints",
            ],
            "name": "checkpoints",
          },
          {
            "channels": [
              "tasks",
            ],
            "name": "tasks",
          },
          {
            "channels": [
              "state",
            ],
            "commands": [
              "state.get",
              "state.storeSearch",
              "state.storePut",
            ],
            "name": "state",
          },
        ],
        "payloadTypes": [
          "LifecycleEvent",
          "MessagesEvent",
          "ToolsEvent",
          "ValuesEvent",
          "UpdatesEvent",
          "CustomEvent",
          "DebugEvent",
          "CheckpointsEvent",
          "TasksEvent",
        ],
      },
      "commandsUrl": "/v2/sessions/<id>/commands",
      "eventsUrl": "/v2/sessions/<id>/events",
      "protocolVersion": "0.3.0",
      "sessionId": "<session-id>",
      "transport": {
        "commandDelivery": "request-response",
        "eventOrdering": "seq",
        "mediaTransferModes": [
          "artifact-only",
          "upgrade-to-websocket",
        ],
        "name": "sse-http",
      },
    },
    "type": "success",
  },
  "runResponse": {
    "id": 2,
    "meta": {
      "appliedThroughSeq": 0,
      "sessionId": "<session-id>",
    },
    "result": {
      "runId": "<run-id>",
    },
    "type": "success",
  },
  "stateResponse": {
    "id": 4,
    "meta": {
      "appliedThroughSeq": 0,
      "sessionId": "<session-id>",
    },
    "result": {
      "values": {},
    },
    "type": "success",
  },
  "subscribeResponse": {
    "id": 1,
    "meta": {
      "appliedThroughSeq": 0,
      "sessionId": "<session-id>",
    },
    "result": {
      "replayedEvents": 0,
      "subscriptionId": "<subscription-id>",
    },
    "type": "success",
  },
  "treeResponse": {
    "id": 3,
    "meta": {
      "appliedThroughSeq": 0,
      "sessionId": "<session-id>",
    },
    "result": {
      "tree": {
        "graphName": "create_agent",
        "namespace": [],
        "status": "running",
      },
    },
    "type": "success",
  },
}
`;

exports[`protocol v2 snapshots > captures a createDeepAgent transcript snapshot 1`] = `
{
  "events": [
    {
      "data": {
        "eventId": "<event-id>",
        "method": "lifecycle",
        "params": {
          "data": {
            "event": "running",
            "graphName": "deep_agent",
          },
          "namespace": [],
          "timestamp": "<timestamp>",
        },
        "seq": "<seq>",
        "type": "event",
      },
      "event": "lifecycle",
      "id": "<event-id>",
    },
  ],
  "openResponse": {
    "id": 0,
    "meta": {
      "appliedThroughSeq": 0,
      "sessionId": "<session-id>",
    },
    "result": {
      "capabilities": {
        "contentBlockTypes": [
          "text",
          "reasoning",
          "tool_call",
          "tool_call_chunk",
          "invalid_tool_call",
          "server_tool_call",
          "server_tool_call_chunk",
          "server_tool_call_result",
          "image",
          "audio",
          "video",
          "file",
          "non_standard",
        ],
        "modules": [
          {
            "commands": [
              "session.open",
              "session.describe",
              "session.close",
            ],
            "name": "session",
          },
          {
            "commands": [
              "run.input",
            ],
            "name": "run",
          },
          {
            "commands": [
              "subscription.subscribe",
              "subscription.unsubscribe",
              "subscription.reconnect",
            ],
            "name": "subscription",
          },
          {
            "channels": [
              "lifecycle",
            ],
            "commands": [
              "agent.getTree",
            ],
            "events": [
              "spawned",
              "running",
              "completed",
              "failed",
              "interrupted",
            ],
            "name": "agent",
          },
          {
            "channels": [
              "values",
            ],
            "name": "values",
          },
          {
            "channels": [
              "updates",
            ],
            "name": "updates",
          },
          {
            "channels": [
              "messages",
            ],
            "name": "messages",
          },
          {
            "channels": [
              "tools",
            ],
            "name": "tools",
          },
          {
            "channels": [
              "custom",
            ],
            "name": "custom",
          },
          {
            "channels": [
              "debug",
            ],
            "name": "debug",
          },
          {
            "channels": [
              "checkpoints",
            ],
            "name": "checkpoints",
          },
          {
            "channels": [
              "tasks",
            ],
            "name": "tasks",
          },
          {
            "channels": [
              "state",
            ],
            "commands": [
              "state.get",
              "state.storeSearch",
              "state.storePut",
            ],
            "name": "state",
          },
        ],
        "payloadTypes": [
          "LifecycleEvent",
          "MessagesEvent",
          "ToolsEvent",
          "ValuesEvent",
          "UpdatesEvent",
          "CustomEvent",
          "DebugEvent",
          "CheckpointsEvent",
          "TasksEvent",
        ],
      },
      "commandsUrl": "/v2/sessions/<id>/commands",
      "eventsUrl": "/v2/sessions/<id>/events",
      "protocolVersion": "0.3.0",
      "sessionId": "<session-id>",
      "transport": {
        "commandDelivery": "request-response",
        "eventOrdering": "seq",
        "mediaTransferModes": [
          "artifact-only",
          "upgrade-to-websocket",
        ],
        "name": "sse-http",
      },
    },
    "type": "success",
  },
  "runResponse": {
    "id": 2,
    "meta": {
      "appliedThroughSeq": 1,
      "sessionId": "<session-id>",
    },
    "result": {
      "runId": "<run-id>",
    },
    "type": "success",
  },
  "stateResponse": {
    "id": 4,
    "meta": {
      "appliedThroughSeq": 1,
      "sessionId": "<session-id>",
    },
    "result": {
      "values": {},
    },
    "type": "success",
  },
  "subscribeResponse": {
    "id": 1,
    "meta": {
      "appliedThroughSeq": 0,
      "sessionId": "<session-id>",
    },
    "result": {
      "replayedEvents": 0,
      "subscriptionId": "<subscription-id>",
    },
    "type": "success",
  },
  "treeResponse": {
    "id": 3,
    "meta": {
      "appliedThroughSeq": 1,
      "sessionId": "<session-id>",
    },
    "result": {
      "tree": {
        "graphName": "deep_agent",
        "namespace": [],
        "status": "running",
      },
    },
    "type": "success",
  },
}
`;

exports[`protocol v2 snapshots > captures a stategraph transcript snapshot 1`] = `
{
  "events": [
    {
      "data": {
        "eventId": "<event-id>",
        "method": "values",
        "params": {
          "data": {
            "messages": [
              {
                "content": "Summarize the protocol draft.",
                "id": "<uuid>",
                "type": "human",
              },
            ],
          },
          "namespace": [],
          "timestamp": "<timestamp>",
        },
        "seq": "<seq>",
        "type": "event",
      },
      "event": "values",
      "id": "<event-id>",
    },
    {
      "data": {
        "eventId": "<event-id>",
        "method": "messages",
        "params": {
          "data": {
            "event": "message-start",
            "messageId": "stategraph-message-0",
            "metadata": {
              "modelType": "chat",
              "provider": "FakeListChatModel",
              "runId": "<run-id>",
              "threadId": "<thread-id>",
              "user_id": "protocol-v2-user",
            },
          },
          "namespace": [
            "agent:<uuid>",
          ],
          "timestamp": "<timestamp>",
        },
        "seq": "<seq>",
        "type": "event",
      },
      "event": "messages",
      "id": "<event-id>",
    },
    {
      "data": {
        "eventId": "<event-id>",
        "method": "messages",
        "params": {
          "data": {
            "contentBlock": {
              "text": "",
              "type": "text",
            },
            "event": "content-block-start",
            "index": 0,
          },
          "namespace": [
            "agent:<uuid>",
          ],
          "timestamp": "<timestamp>",
        },
        "seq": "<seq>",
        "type": "event",
      },
      "event": "messages",
      "id": "<event-id>",
    },
    {
      "data": {
        "eventId": "<event-id>",
        "method": "messages",
        "params": {
          "data": {
            "contentBlock": {
              "text": "P",
              "type": "text",
            },
            "event": "content-block-delta",
            "index": 0,
          },
          "namespace": [
            "agent:<uuid>",
          ],
          "timestamp": "<timestamp>",
        },
        "seq": "<seq>",
        "type": "event",
      },
      "event": "messages",
      "id": "<event-id>",
    },
    {
      "data": {
        "eventId": "<event-id>",
        "method": "messages",
        "params": {
          "data": {
            "contentBlock": {
              "text": "l",
              "type": "text",
            },
            "event": "content-block-delta",
            "index": 0,
          },
          "namespace": [
            "agent:<uuid>",
          ],
          "timestamp": "<timestamp>",
        },
        "seq": "<seq>",
        "type": "event",
      },
      "event": "messages",
      "id": "<event-id>",
    },
    {
      "data": {
        "eventId": "<event-id>",
        "method": "messages",
        "params": {
          "data": {
            "contentBlock": {
              "text": "a",
              "type": "text",
            },
            "event": "content-block-delta",
            "index": 0,
          },
          "namespace": [
            "agent:<uuid>",
          ],
          "timestamp": "<timestamp>",
        },
        "seq": "<seq>",
        "type": "event",
      },
      "event": "messages",
      "id": "<event-id>",
    },
    {
      "data": {
        "eventId": "<event-id>",
        "method": "messages",
        "params": {
          "data": {
            "contentBlock": {
              "text": "n",
              "type": "text",
            },
            "event": "content-block-delta",
            "index": 0,
          },
          "namespace": [
            "agent:<uuid>",
          ],
          "timestamp": "<timestamp>",
        },
        "seq": "<seq>",
        "type": "event",
      },
      "event": "messages",
      "id": "<event-id>",
    },
    {
      "data": {
        "eventId": "<event-id>",
        "method": "messages",
        "params": {
          "data": {
            "contentBlock": {
              "text": " ",
              "type": "text",
            },
            "event": "content-block-delta",
            "index": 0,
          },
          "namespace": [
            "agent:<uuid>",
          ],
          "timestamp": "<timestamp>",
        },
        "seq": "<seq>",
        "type": "event",
      },
      "event": "messages",
      "id": "<event-id>",
    },
    {
      "data": {
        "eventId": "<event-id>",
        "method": "messages",
        "params": {
          "data": {
            "contentBlock": {
              "text": "a",
              "type": "text",
            },
            "event": "content-block-delta",
            "index": 0,
          },
          "namespace": [
            "agent:<uuid>",
          ],
          "timestamp": "<timestamp>",
        },
        "seq": "<seq>",
        "type": "event",
      },
      "event": "messages",
      "id": "<event-id>",
    },
    {
      "data": {
        "eventId": "<event-id>",
        "method": "messages",
        "params": {
          "data": {
            "contentBlock": {
              "text": "c",
              "type": "text",
            },
            "event": "content-block-delta",
            "index": 0,
          },
          "namespace": [
            "agent:<uuid>",
          ],
          "timestamp": "<timestamp>",
        },
        "seq": "<seq>",
        "type": "event",
      },
      "event": "messages",
      "id": "<event-id>",
    },
    {
      "data": {
        "eventId": "<event-id>",
        "method": "messages",
        "params": {
          "data": {
            "contentBlock": {
              "text": "c",
              "type": "text",
            },
            "event": "content-block-delta",
            "index": 0,
          },
          "namespace": [
            "agent:<uuid>",
          ],
          "timestamp": "<timestamp>",
        },
        "seq": "<seq>",
        "type": "event",
      },
      "event": "messages",
      "id": "<event-id>",
    },
    {
      "data": {
        "eventId": "<event-id>",
        "method": "messages",
        "params": {
          "data": {
            "contentBlock": {
              "text": "e",
              "type": "text",
            },
            "event": "content-block-delta",
            "index": 0,
          },
          "namespace": [
            "agent:<uuid>",
          ],
          "timestamp": "<timestamp>",
        },
        "seq": "<seq>",
        "type": "event",
      },
      "event": "messages",
      "id": "<event-id>",
    },
    {
      "data": {
        "eventId": "<event-id>",
        "method": "messages",
        "params": {
          "data": {
            "contentBlock": {
              "text": "p",
              "type": "text",
            },
            "event": "content-block-delta",
            "index": 0,
          },
          "namespace": [
            "agent:<uuid>",
          ],
          "timestamp": "<timestamp>",
        },
        "seq": "<seq>",
        "type": "event",
      },
      "event": "messages",
      "id": "<event-id>",
    },
    {
      "data": {
        "eventId": "<event-id>",
        "method": "messages",
        "params": {
          "data": {
            "contentBlock": {
              "text": "t",
              "type": "text",
            },
            "event": "content-block-delta",
            "index": 0,
          },
          "namespace": [
            "agent:<uuid>",
          ],
          "timestamp": "<timestamp>",
        },
        "seq": "<seq>",
        "type": "event",
      },
      "event": "messages",
      "id": "<event-id>",
    },
    {
      "data": {
        "eventId": "<event-id>",
        "method": "messages",
        "params": {
          "data": {
            "contentBlock": {
              "text": "e",
              "type": "text",
            },
            "event": "content-block-delta",
            "index": 0,
          },
          "namespace": [
            "agent:<uuid>",
          ],
          "timestamp": "<timestamp>",
        },
        "seq": "<seq>",
        "type": "event",
      },
      "event": "messages",
      "id": "<event-id>",
    },
    {
      "data": {
        "eventId": "<event-id>",
        "method": "messages",
        "params": {
          "data": {
            "contentBlock": {
              "text": "d",
              "type": "text",
            },
            "event": "content-block-delta",
            "index": 0,
          },
          "namespace": [
            "agent:<uuid>",
          ],
          "timestamp": "<timestamp>",
        },
        "seq": "<seq>",
        "type": "event",
      },
      "event": "messages",
      "id": "<event-id>",
    },
    {
      "data": {
        "eventId": "<event-id>",
        "method": "messages",
        "params": {
          "data": {
            "contentBlock": {
              "text": ".",
              "type": "text",
            },
            "event": "content-block-delta",
            "index": 0,
          },
          "namespace": [
            "agent:<uuid>",
          ],
          "timestamp": "<timestamp>",
        },
        "seq": "<seq>",
        "type": "event",
      },
      "event": "messages",
      "id": "<event-id>",
    },
    {
      "data": {
        "eventId": "<event-id>",
        "method": "values",
        "params": {
          "data": {
            "messages": [
              {
                "content": "Summarize the protocol draft.",
                "id": "<uuid>",
                "type": "human",
              },
              {
                "content": "Plan accepted.",
                "id": "stategraph-message-0",
                "type": "ai",
              },
            ],
          },
          "namespace": [],
          "timestamp": "<timestamp>",
        },
        "seq": "<seq>",
        "type": "event",
      },
      "event": "values",
      "id": "<event-id>",
    },
  ],
  "openResponse": {
    "id": 0,
    "meta": {
      "appliedThroughSeq": 0,
      "sessionId": "<session-id>",
    },
    "result": {
      "capabilities": {
        "contentBlockTypes": [
          "text",
          "reasoning",
          "tool_call",
          "tool_call_chunk",
          "invalid_tool_call",
          "server_tool_call",
          "server_tool_call_chunk",
          "server_tool_call_result",
          "image",
          "audio",
          "video",
          "file",
          "non_standard",
        ],
        "modules": [
          {
            "commands": [
              "session.open",
              "session.describe",
              "session.close",
            ],
            "name": "session",
          },
          {
            "commands": [
              "run.input",
            ],
            "name": "run",
          },
          {
            "commands": [
              "subscription.subscribe",
              "subscription.unsubscribe",
              "subscription.reconnect",
            ],
            "name": "subscription",
          },
          {
            "channels": [
              "lifecycle",
            ],
            "commands": [
              "agent.getTree",
            ],
            "events": [
              "spawned",
              "running",
              "completed",
              "failed",
              "interrupted",
            ],
            "name": "agent",
          },
          {
            "channels": [
              "values",
            ],
            "name": "values",
          },
          {
            "channels": [
              "updates",
            ],
            "name": "updates",
          },
          {
            "channels": [
              "messages",
            ],
            "name": "messages",
          },
          {
            "channels": [
              "tools",
            ],
            "name": "tools",
          },
          {
            "channels": [
              "custom",
            ],
            "name": "custom",
          },
          {
            "channels": [
              "debug",
            ],
            "name": "debug",
          },
          {
            "channels": [
              "checkpoints",
            ],
            "name": "checkpoints",
          },
          {
            "channels": [
              "tasks",
            ],
            "name": "tasks",
          },
          {
            "channels": [
              "state",
            ],
            "commands": [
              "state.get",
              "state.storeSearch",
              "state.storePut",
            ],
            "name": "state",
          },
        ],
        "payloadTypes": [
          "LifecycleEvent",
          "MessagesEvent",
          "ToolsEvent",
          "ValuesEvent",
          "UpdatesEvent",
          "CustomEvent",
          "DebugEvent",
          "CheckpointsEvent",
          "TasksEvent",
        ],
      },
      "commandsUrl": "/v2/sessions/<id>/commands",
      "eventsUrl": "/v2/sessions/<id>/events",
      "protocolVersion": "0.3.0",
      "sessionId": "<session-id>",
      "transport": {
        "commandDelivery": "request-response",
        "eventOrdering": "seq",
        "mediaTransferModes": [
          "artifact-only",
          "upgrade-to-websocket",
        ],
        "name": "sse-http",
      },
    },
    "type": "success",
  },
  "runResponse": {
    "id": 2,
    "meta": {
      "appliedThroughSeq": 0,
      "sessionId": "<session-id>",
    },
    "result": {
      "runId": "<run-id>",
    },
    "type": "success",
  },
  "stateResponse": {
    "id": 4,
    "meta": {
      "appliedThroughSeq": 0,
      "sessionId": "<session-id>",
    },
    "result": {
      "values": {},
    },
    "type": "success",
  },
  "subscribeResponse": {
    "id": 1,
    "meta": {
      "appliedThroughSeq": 0,
      "sessionId": "<session-id>",
    },
    "result": {
      "replayedEvents": 0,
      "subscriptionId": "<subscription-id>",
    },
    "type": "success",
  },
  "treeResponse": {
    "id": 3,
    "meta": {
      "appliedThroughSeq": 0,
      "sessionId": "<session-id>",
    },
    "result": {
      "tree": {
        "graphName": "stategraph_text",
        "namespace": [],
        "status": "running",
      },
    },
    "type": "success",
  },
}
`;
